--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "get-random-values",
   "version": "1.0.0",
   "description": "Cross browser and node.js implementation to generate random values",
-  "main": "index.js",
+  "main": "./index.js",
+  "module": "./index.js",
+  "types": "./index.d.ts",
   "keywords": [],
   "author": "ProtonMail",
   "license": "MIT"
